# backend/docs/swagger.yaml
@@ -187,6 +187,10 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/internal_server.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_server.errorResponse'
       security:
       - BearerAuth: []
       summary: Leave matchmaking queue
